crates/gpui_tea/tests/ui/dynamic_child_path.stderr
error: `path` must be a string literal
  --> tests/ui/dynamic_child_path.rs:22:20
   |
22 |     #[child(path = CHILD_PATH, lift = Msg::Child, extract = Msg::into_child)]
   |                    ^^^^^^^^^^
